--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My test page</title>
+    <title>Github Page</title>
   </head>
   <body>
-    <p>Hello, world!</p>
+    <p><a href="think-python/index.html">Think Python</a></p>
   </body>
 </html>
