added header to index

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Github Page</title>
   </head>
   <body>
+    <h1>Index</h1>
     <p><a href="think-python/index.html">Think Python</a></p>
   </body>
 </html>
